--- a/app/src/main/res/layout/fragment_form_mother_layout.xml
+++ b/app/src/main/res/layout/fragment_form_mother_layout.xml
@@ -20,7 +20,7 @@
                 android:text="@string/day_tian"
                 style="@style/form_grit" />
             <ImageView
-                android:src="@drawable/ic_trangle"
+                android:src="@drawable/ic_triangle"
                 style="@style/trangle" />
         </LinearLayout>
 
@@ -33,6 +33,7 @@
                 android:text="9月"
                 style="@style/form_month" />
             <ImageView
+                android:id="@+id/form_mother_weight"
                 android:src="@drawable/temp_weight_form"
                 style="@style/form" />
 
@@ -89,7 +90,7 @@
                 android:text="@string/day_tian"
                 style="@style/form_grit" />
             <ImageView
-                android:src="@drawable/ic_trangle"
+                android:src="@drawable/ic_triangle"
                 style="@style/trangle" />
         </LinearLayout>
 
@@ -102,6 +103,7 @@
                 android:text="9月"
                 style="@style/form_month" />
             <ImageView
+                android:id="@+id/form_mother_temperature"
                 android:src="@drawable/temp_temperature_form"
                 style="@style/form" />
 
