--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_content_container"
         android:layout_above="@+id/footer"
+        android:layout_marginBottom="-13dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
