--- a/app/src/main/res/layout/activity_personal_info.xml
+++ b/app/src/main/res/layout/activity_personal_info.xml
@@ -31,7 +31,7 @@
                 android:layout_width="50dip"
                 android:layout_height="50dip"
                 android:layout_alignParentRight="true"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/temp_head_pic" />
         </RelativeLayout>
 
         <View
@@ -203,6 +203,7 @@
             android:text="更换手机，请联系会所管理员！" />
 
         <TextView
+            android:id="@+id/tv_club_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
