--- a/app/src/main/res/layout/fragment_host.xml
+++ b/app/src/main/res/layout/fragment_host.xml
@@ -320,8 +320,7 @@
                 android:id="@+id/im_grow_up_background"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/shouye_chengzhang_bg"/>
+                android:scaleType="fitXY"/>
             <ImageView
                 android:id="@+id/im_arc_5"
                 android:layout_width="match_parent"
