--- a/app/src/main/res/layout/activity_image_pager.xml
+++ b/app/src/main/res/layout/activity_image_pager.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,18 +8,19 @@
     <ImageView
         android:id="@+id/iv_detail_show"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
         android:adjustViewBounds="true"
         android:contentDescription="123"
         android:scaleType="centerCrop"/>
     <TextView
         android:id="@+id/indicator"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:gravity="center"
         android:textSize="18sp"
-        android:visibility="gone"/>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:visibility="visible"/>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
@@ -29,9 +30,10 @@
         android:visibility="gone"/>
 
     <RelativeLayout
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="50dip"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ImageView
             android:id="@+id/iv_image_share"
@@ -53,4 +55,4 @@
             android:layout_alignParentRight="true"
             android:src="@drawable/collect" />
     </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
