--- a/app/src/main/res/layout/activity_image_pager.xml
+++ b/app/src/main/res/layout/activity_image_pager.xml
@@ -38,22 +38,24 @@
 
         <ImageView
             android:id="@+id/iv_image_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dip"
+            android:layout_height="31dip"
+            android:layout_centerVertical="true"
             android:src="@drawable/share" />
 
         <ImageView
             android:id="@+id/iv_image_collect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dip"
+            android:layout_height="31dip"
             android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:src="@drawable/collect" />
-        <!--todo 删除的图表需要替换-->
         <ImageView
             android:id="@+id/iv_image_delete"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dip"
+            android:layout_height="31dip"
             android:layout_alignParentRight="true"
-            android:src="@drawable/collect" />
+            android:layout_centerVertical="true"
+            android:src="@drawable/delete" />
     </RelativeLayout>
 </RelativeLayout>
