--- a/app/src/main/res/layout/activity_image_pager.xml
+++ b/app/src/main/res/layout/activity_image_pager.xml
@@ -32,6 +32,7 @@
     <RelativeLayout
         android:id="@+id/rl_photo_bottom"
         android:layout_alignParentBottom="true"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="50dip"
         android:visibility="visible">
