首页，第三模块，点击背景图查看详细照片

--- a/app/src/main/res/layout/item_photo_grid_pick.xml
+++ b/app/src/main/res/layout/item_photo_grid_pick.xml
@@ -11,8 +11,8 @@
 
     <ImageButton
         android:id="@+id/iv_item_pick"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="23dip"
+        android:layout_height="23dip"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginRight="3dip"
