--- a/app/src/main/res/layout/item_photo_grid_pick.xml
+++ b/app/src/main/res/layout/item_photo_grid_pick.xml
@@ -9,7 +9,7 @@
         android:layout_height="120dip"
         android:scaleType="centerCrop" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/iv_item_pick"
         android:layout_width="23dip"
         android:layout_height="23dip"
