--- a/app/src/main/res/layout/fragment_health_layout.xml
+++ b/app/src/main/res/layout/fragment_health_layout.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/primary_margin"
         android:orientation="vertical">
         <!-- 头部 -->
         <RelativeLayout
