--- a/ck-lib/src/main/res/values/attrs.xml
+++ b/ck-lib/src/main/res/values/attrs.xml
@@ -46,4 +46,8 @@
         <attr name="icon_height" format="dimension"/>
         <attr name="text_height" format="dimension"/>
     </declare-styleable>
+
+    <declare-styleable name="ImageViewer">
+        <attr name="model" format="boolean"/>
+    </declare-styleable>
 </resources>
