完成图片上传界面 完成图片上传服务 完成图片上传监听框架 完成图片多张预览 修复图片预览控件bug 完成标签编辑界面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="healthActivity">#3bb7a5</color>
     <color name="healthFood">#3badb7</color>
     <color name="healthKnowledge">#3b8ab7</color>
+    <color name="tabColor">#69c5a3</color>
 </resources>
