--- a/app/src/main/res/layout/activity_image_viewer_layout.xml
+++ b/app/src/main/res/layout/activity_image_viewer_layout.xml
@@ -4,14 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
     <com.uuzz.android.ui.view.ImageViewer
         android:id="@+id/iv_detail_show"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
-        android:contentDescription="123"
+        android:visibility="gone"
         android:scaleType="matrix"/>
     <TextView
         android:id="@+id/indicator"
@@ -27,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:visibility="gone"/>
+        android:visibility="visible"/>
 
     <RelativeLayout
         android:id="@+id/rl_photo_bottom"
