--- a/app/src/main/res/drawable/bg_item_white_touchable.xml
+++ b/app/src/main/res/drawable/bg_item_white_touchable.xml
@@ -4,7 +4,7 @@
     <item android:state_pressed="true">
         <shape>
             <solid
-                android:color="@color/colorPrimaryDark"
+                android:color="@color/grayDark"
                 />
             <padding
                 android:bottom="0dp"
@@ -18,7 +18,7 @@
     <item android:state_selected="true">
         <shape>
             <solid
-                android:color="@color/colorPrimaryDark"
+                android:color="@color/grayDark"
                 />
             <padding
                 android:bottom="0dp"
@@ -32,7 +32,7 @@
     <item android:state_checked="true">
         <shape>
             <solid
-                android:color="@color/colorPrimaryDark"
+                android:color="@color/grayDark"
                 />
             <padding
                 android:bottom="0dp"
