--- a/app/src/main/res/layout/activity_photo_picker.xml
+++ b/app/src/main/res/layout/activity_photo_picker.xml
@@ -21,7 +21,7 @@
                 android:layout_height="wrap_content"
                 android:horizontalSpacing="5dp"
                 android:numColumns="3"
-                android:verticalSpacing="5dp"></GridView>
+                android:verticalSpacing="5dp" />
         </LinearLayout>
 
         <View
