--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="textColorFootDark">#B4D3D4</color>
     <color name="transparent">#00000000</color><!--透明 -->
     <color name="textColorHint">#858585</color>
+    <color name="grayDark">#dddddd</color>
 
 
 
