--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item type="id" name="pick_picture_content" />
     <item type="id" name="pick_picture_tag" />
+    <item type="id" name="picture_position" />
 </resources>
