--- a/app/src/main/res/layout/item_picture_club.xml
+++ b/app/src/main/res/layout/item_picture_club.xml
@@ -3,16 +3,17 @@
     android:paddingLeft="15dip"
     android:paddingRight="15dip"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/primary_List_margin"
+        android:paddingBottom="@dimen/primary_List_margin">
 
         <ImageView
             android:id="@+id/iv_club_pic"
             android:layout_width="101dip"
             android:layout_height="101dip"
-            android:layout_marginBottom="21dip"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
