--- a/app/src/main/res/layout/item_picture_person.xml
+++ b/app/src/main/res/layout/item_picture_person.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/primary_margin"
+    android:paddingRight="@dimen/primary_margin">
 
     <TextView
         android:id="@+id/tv_show_time"
