--- a/app/src/main/res/layout/activity_upload_photo_activity.xml
+++ b/app/src/main/res/layout/activity_upload_photo_activity.xml
@@ -2,26 +2,72 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/bottom"
+        android:layout_alignParentBottom="true"
+        android:padding="@dimen/primary_margin"
+        android:background="#fbfbfb"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:textColor="@color/textColorLight"
+            android:padding="4dip"
+            android:textSize="@dimen/fourth_text_size"
+            android:text="@string/cancel"/>
+        <TextView
+            android:id="@+id/tv_commit"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingLeft="@dimen/primary_List_margin"
+            android:paddingRight="@dimen/primary_List_margin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dip"
+            android:paddingBottom="4dip"
+            android:background="@drawable/bg_corner_green"
+            android:textColor="@color/white"
+            android:textSize="@dimen/fourth_text_size"
+            android:text="@string/confirm_upload"/>
+    </RelativeLayout>
+
     <LinearLayout
         android:orientation="vertical"
-        android:layout_above="@+id/bottom"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="@dimen/primary_margin">
+        android:padding="@dimen/primary_margin"
+        android:layout_above="@id/bottom"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
-        <TextView
+        <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/textColorLight"
             android:textSize="@dimen/second_text_size"
-            android:text="@string/owned_tabs"/>
+            android:text="@string/owned_tabs"/>-->
 
-        <com.uuzz.android.ui.view.FlowLayout
+        <!--<com.uuzz.android.ui.view.FlowLayout
             android:id="@+id/fl_tab_container"
             android:layout_marginTop="@dimen/primary_margin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"/>-->
+
+        <EditText
+            android:id="@+id/ed_tab"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:padding="0dip"
+            android:textColorHint="@color/textColorLight"
+            android:hint="标签"/>
 
         <View
             android:layout_marginTop="@dimen/primary_List_margin"
@@ -39,33 +85,4 @@
             android:horizontalSpacing="6dp"/>
 
     </LinearLayout>
-    <RelativeLayout
-        android:id="@+id/bottom"
-        android:layout_alignParentBottom="true"
-        android:padding="@dimen/primary_margin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/tv_cancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:textColor="@color/textColorLight"
-            android:textSize="@dimen/second_text_size"
-            android:text="@string/cancel"/>
-        <TextView
-            android:id="@+id/tv_commit"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:paddingLeft="@dimen/primary_margin"
-            android:paddingRight="@dimen/primary_margin"
-            android:paddingTop="8dip"
-            android:paddingBottom="8dip"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_corner_green"
-            android:textColor="@color/white"
-            android:textSize="@dimen/second_text_size"
-            android:text="@string/confirm_upload"/>
-    </RelativeLayout>
 </RelativeLayout>
