--- a/app/src/main/res/layout/item_photo_grid_pick.xml
+++ b/app/src/main/res/layout/item_photo_grid_pick.xml
@@ -11,12 +11,14 @@
 
     <ImageView
         android:id="@+id/iv_item_pick"
-        android:layout_width="23dip"
-        android:layout_height="23dip"
+        android:layout_width="31dip"
+        android:layout_height="31dip"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="3dip"
-        android:layout_marginTop="3dip"
         android:background="@null"
+        android:paddingTop="3dip"
+        android:paddingRight="3dip"
+        android:paddingBottom="5dip"
+        android:paddingLeft="5dip"
         android:src="@drawable/picture_unselected" />
 </RelativeLayout>
