--- a/app/src/main/res/layout/item_picture_club.xml
+++ b/app/src/main/res/layout/item_picture_club.xml
@@ -13,8 +13,7 @@
         <ImageView
             android:id="@+id/iv_club_pic"
             android:layout_width="101dip"
-            android:layout_height="101dip"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_height="101dip" />
 
         <TextView
             android:id="@+id/tv_club_title"
@@ -25,19 +24,22 @@
 
         <TextView
             android:id="@+id/tv_clubpic_num"
-            style="@style/tv_personal_info_item_left_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/textColorPrimary"
             android:layout_below="@+id/tv_club_title"
             android:layout_marginLeft="15dip"
             android:layout_marginTop="10dip"
             android:layout_toRightOf="@+id/iv_club_pic"
-            android:text="64"
-            android:textSize="14dip" />
+            android:textSize="@dimen/third_text_size" />
 
         <TextView
             android:id="@+id/tv_clubpic_time"
-            style="@style/tv_personal_info_item_left_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/third_text_size"
+            android:textColor="@color/tabColor"
             android:layout_alignBottom="@+id/iv_club_pic"
-            android:layout_alignParentRight="true"
-            android:text="1990" />
+            android:layout_alignParentRight="true" />
     </RelativeLayout>
 </LinearLayout>
