--- a/app/src/main/res/layout/activity_ask_question.xml
+++ b/app/src/main/res/layout/activity_ask_question.xml
@@ -7,14 +7,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="15dip"
+        android:layout_marginRight="15dip"
         android:orientation="vertical">
 
-        <TextView
+        <EditText
+            android:id="@+id/et_ask_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dip"
-            android:text="请详细输入您的问题(限140字)"
+            android:hint="请详细输入您的问题(限140字)"
             android:textColor="#9b9b9b"
+            android:maxLength="140"
+            android:background="@null"
             android:textSize="18dip" />
 
         <View
@@ -24,16 +28,23 @@
             android:background="#e1e1e1" />
 
         <RelativeLayout
-            android:layout_width="110dip"
-            android:layout_height="110dip"
-            android:layout_marginTop="15dip"
-            android:background="@drawable/bg_ask_add_photo">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dip">
 
-            <ImageView
+            <!--<ImageView
                 android:layout_width="71dip"
                 android:layout_height="77dip"
                 android:layout_centerInParent="true"
-                android:src="@drawable/image_add_photo" />
+                android:src="@drawable/image_add_photo" />-->
+            <GridView
+                android:id="@+id/gv_photo_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="38dp"
+                android:numColumns="3"
+                android:verticalSpacing="13dp"
+                android:horizontalSpacing="6dp"/>
         </RelativeLayout>
     </LinearLayout>
     
@@ -43,6 +54,7 @@
         android:background="#fbfdff"
         android:layout_alignParentBottom="true">
         <Button
+            android:id="@+id/btn_release"
             android:layout_width="58dip"
             android:layout_height="30dip"
             android:layout_marginRight="15dip"
