添加收藏文章接口 添加文章搜索

--- a/app/src/main/res/layout/item_growup.xml
+++ b/app/src/main/res/layout/item_growup.xml
@@ -40,20 +40,27 @@
         android:textSize="14dip"
         android:text="11111" />
 
-    <ImageView
+    <com.uuzz.android.ui.view.IconTextView
         android:id="@+id/iv_item_share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/icon_share"
+        android:textSize="20dip"
+        android:textColor="@color/textColorHint"
+        android:gravity="center"
         android:layout_alignBottom="@+id/iv_item_pic"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/tv_item_content"
-        android:layout_marginRight="17dip"
-        android:src="@drawable/item_share" />
+        android:layout_marginRight="17dip" />
 
-    <ImageView
+    <com.uuzz.android.ui.view.IconTextView
         android:id="@+id/iv_item_heart"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/icon_collect"
+        android:textSize="24dip"
+        android:textColor="@color/textColorHint"
+        android:gravity="center"
         android:layout_alignBottom="@+id/iv_item_pic"
         android:layout_below="@+id/tv_item_content"
         android:layout_toLeftOf="@+id/iv_item_share"
