修正图片链接未拼接问题

--- a/app/src/main/res/layout/item_picture_club.xml
+++ b/app/src/main/res/layout/item_picture_club.xml
@@ -12,6 +12,7 @@
 
         <ImageView
             android:id="@+id/iv_club_pic"
+            android:scaleType="centerCrop"
             android:layout_width="101dip"
             android:layout_height="101dip" />
 
