--- a/app/src/main/res/layout/item_picture_grid_person.xml
+++ b/app/src/main/res/layout/item_picture_grid_person.xml
@@ -5,6 +5,7 @@
     <ImageView
         android:id="@+id/iv_content"
         android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:layout_width="100dp"
         android:layout_height="100dp" />
 
