--- a/app/src/main/res/layout/item_activitys.xml
+++ b/app/src/main/res/layout/item_activitys.xml
@@ -8,6 +8,8 @@
         android:layout_width="101dip"
         android:layout_height="101dip"
         android:layout_marginTop="15dip"
+        android:scaleType="center"
+        android:layout_marginLeft="15dip"
         android:background="@drawable/item_image_corners"
         android:src="@mipmap/ic_launcher" />
 
@@ -19,10 +21,12 @@
         android:layout_toRightOf="@+id/iv_item_pic"
         android:layout_marginLeft="14dip"
         android:layout_marginRight="15dip"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:textSize="18dip"
         android:text="标题" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/tv_item_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,8 +73,45 @@
         android:textSize="@dimen/third_text_size"
         android:textColor="@color/textColorPrimary"
         android:text="艾玛家月子中心" />
+-->
 
     <TextView
+        android:id="@+id/tv_item_content"
+        android:layout_width="match_parent"
+        android:layout_height="42dip"
+        android:layout_below="@+id/tv_item_title"
+        android:layout_toRightOf="@+id/iv_item_pic"
+        android:lines="2"
+        android:ellipsize="end"
+        android:lineSpacingExtra="2dip"
+        android:layout_marginLeft="14dip"
+        android:layout_marginTop="10dip"
+        android:layout_marginRight="15dip"
+        android:textSize="@dimen/third_text_size"
+        android:textColor="@color/textColorPrimary"
+        android:text="fda;jfd"/>
+
+    <TextView
+        android:id="@+id/tv_item_place"
+        android:layout_width="72dip"
+        android:layout_height="16dip"
+        android:layout_below="@+id/tv_item_content"
+        android:layout_toRightOf="@+id/iv_item_pic"
+        android:layout_marginLeft="14dip"
+        android:layout_marginTop="10dip"
+        android:ellipsize="end"
+        android:text="北北京北京北京北京北京北京京"/>
+
+    <TextView
+        android:id="@+id/tv_item_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_item_content"
+        android:layout_marginRight="15dip"
+        android:layout_marginTop="10dip"
+        android:layout_alignParentRight="true"
+        android:text="2016-10-21  10:30"/>
+    <!--<TextView
         android:id="@+id/tv_item_area"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -92,6 +133,6 @@
         android:layout_marginTop="10dip"
         android:textSize="@dimen/third_text_size"
         android:textColor="@color/textColorPrimary"
-        android:text="北京市" />
+        android:text="北京市" />-->
 
 </RelativeLayout>
